@@ -1,7 +1,7 @@
 {
-  "name": "Concreep",
+  "name": "ConcreepRefined",
   "version": "2.0.0",
-  "title": "Concreep",
+  "title": "Concreep Refined",
   "author": "Zero Serenity",
   "contact": "",
   "homepage": "https://github.com/CRGorman/Concreep",
