@@ -1,7 +1,9 @@
 [mod-setting-name]
-concreep range=concreep range
-ignore placed tiles=ignore placed tiles
+concreep range=Concreep Range
+concreep construction factor=Construction Bot Factor
+ignore placed tiles=Ignore Placed Tiles
 
 [mod-setting-description]
-concreep range=Range that roboports will automatically place concreep as a percentage of roboport construction range.
-ignore placed tiles=Replace already built tiles with concrete
+concreep range=Range that roboports will automatically place concreep as a percentage of roboport construction range. (0-100, Default 100)
+concreep construction factor=Divisor of available construction robots to use for placing concrete tiles. Lower is more taxing on construction robots! (1-20, Default: 10, 1 will use all available robots)
+ignore placed tiles=Ignore already built tiles and replace with refined concrete.
